src/parser/snapshots/texlab__parser__latex__tests__parse@unmatched_brackets.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/group/unmatched_brackets.txt
---
ROOT@0..2
  PREAMBLE@0..2
    ERROR@0..1
      R_BRACK@0..1 "]"
    MIXED_GROUP@1..2
      L_BRACK@1..2 "["
      MISSING@2..2 ""

